# upbit-auto

./: ETH-USD.csv  main.py  pyproject.toml  slackbot.py  upbit.py
